--- a/Lab1/Lab1.vcxproj.filters
+++ b/Lab1/Lab1.vcxproj.filters
@@ -28,6 +28,12 @@
     <None Include="shaders\blinnPhong.vs">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="shaders\Gooch.fs">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="shaders\Gooch.vs">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Shaders">
