--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,30 @@ Lab1/Debug/Lab1.log
 Lab1/Debug/main.obj
 Lab1/Debug/vc141.idb
 Lab1/Debug/vc141.pdb
+*.pdb
+*.ipch
+*.ipch
+*.ipch
+*.pdb
+.vs/RTR_projects/v15/ipch/AutoPCH/LAB1-6babbec8/CGOBJECT-7e508ee0/CGOBJECT.ipch
+.vs/RTR_projects/v15/ipch/AutoPCH/LAB1-6babbec8/MAIN-14815364/MAIN.ipch
+Debug/Lab1.exe
+Debug/Lab1.ilk
+Debug/Lab1.pdb
+Lab1/Debug/CGObject.obj
+Lab1/Debug/Lab1.log
+Lab1/Debug/main.obj
+Lab1/Debug/vc141.idb
+Lab1/Debug/vc141.pdb
+x64/Debug/Lab1.pdb
+.vs/RTR_projects/v15/ipch/AutoPCH/LAB1-6babbec8/CGOBJECT-7e508ee0/CGOBJECT.ipch
+.vs/RTR_projects/v15/ipch/AutoPCH/LAB1-6babbec8/MAIN-14815364/MAIN.ipch
+Debug/Lab1.exe
+Debug/Lab1.ilk
+Debug/Lab1.pdb
+Lab1/Debug/CGObject.obj
+Lab1/Debug/Lab1.log
+Lab1/Debug/main.obj
+Lab1/Debug/vc141.idb
+Lab1/Debug/vc141.pdb
+x64/Debug/Lab1.pdb
