--- a/Lab1/Lab1.vcxproj.filters
+++ b/Lab1/Lab1.vcxproj.filters
@@ -34,6 +34,12 @@
     <None Include="shaders\Gooch.vs">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="shaders\CookTorrence.fs">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="shaders\CookTorrence.vs">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Shaders">
