--- a/Lab2/Lab2.vcxproj.filters
+++ b/Lab2/Lab2.vcxproj.filters
@@ -14,6 +14,9 @@
     <ClInclude Include="opengl_utils.h">
       <Filter>Headers</Filter>
     </ClInclude>
+    <ClInclude Include="stb_image.h">
+      <Filter>Headers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\phong.fs">
@@ -26,6 +29,18 @@
       <Filter>Shaders</Filter>
     </None>
     <None Include="shaders\cubeMap.vs">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="shaders\Reflection.fs">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="shaders\Reflection.vs">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="shaders\Refraction.fs">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="shaders\Refraction.vs">
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
