--- a/Lab2/Lab2.vcxproj.filters
+++ b/Lab2/Lab2.vcxproj.filters
@@ -43,6 +43,12 @@
     <None Include="shaders\Refraction.vs">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="shaders\Fresnel.fs">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="shaders\Fresnel.vs">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Shaders">
