--- a/Lab2/Lab2.vcxproj
+++ b/Lab2/Lab2.vcxproj
@@ -134,6 +134,8 @@
   <ItemGroup>
     <None Include="shaders\cubeMap.fs" />
     <None Include="shaders\cubeMap.vs" />
+    <None Include="shaders\Fresnel.fs" />
+    <None Include="shaders\Fresnel.vs" />
     <None Include="shaders\phong.fs" />
     <None Include="shaders\phong.vs" />
     <None Include="shaders\Reflection.fs" />
