--- a/Lab3/Lab3.vcxproj.filters
+++ b/Lab3/Lab3.vcxproj.filters
@@ -35,10 +35,10 @@
     <None Include="shaders\cubeMap.vs">
       <Filter>Shaders</Filter>
     </None>
-    <None Include="shaders\FresnelWithTexture.fs">
+    <None Include="shaders\BlinnPhongWithTexture.fs">
       <Filter>Shaders</Filter>
     </None>
-    <None Include="shaders\FresnelWithTexture.vs">
+    <None Include="shaders\BlinnPhongWithTexture.vs">
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
