--- a/Lab4/Lab4.vcxproj
+++ b/Lab4/Lab4.vcxproj
@@ -134,10 +134,10 @@
     <ClCompile Include="vboindexer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="shaders\BlinnPhongWithTexture.fs" />
+    <None Include="shaders\BlinnPhongWithTexture.vs" />
     <None Include="shaders\cubeMap.fs" />
     <None Include="shaders\cubeMap.vs" />
-    <None Include="shaders\FresnelWithTexture.fs" />
-    <None Include="shaders\FresnelWithTexture.vs" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Dependencies\OBJ_Loader.h" />
