--- a/Lab6/Lab6.vcxproj.filters
+++ b/Lab6/Lab6.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="vboindexer.hpp">
       <Filter>Headers</Filter>
     </ClInclude>
+    <ClInclude Include="lighting.h">
+      <Filter>Headers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\cubeMap.fs">
