2 shadows and lights

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
-
+Release/*
+Debug/*
 Debug/Lab1.exe
 Debug/Lab1.ilk
 Debug/Lab1.pdb
 .vs/RTR_projects/v15/Browse.VC.opendb
 .vs/RTR_projects/v15/ipch/AutoPCH/LAB1-6babbec8/CGOBJECT-7e508ee0/CGOBJECT.ipch
 .vs/RTR_projects/v15/ipch/AutoPCH/LAB1-6babbec8/MAIN-14815364/MAIN.ipch
+Lab1/Debug/*
 Lab1/Debug/CGObject.obj
 Lab1/Debug/Lab1.log
 Lab1/Debug/main.obj
@@ -47,3 +49,59 @@ Lab1/Debug/main.obj
 Lab1/Debug/vc141.idb
 Lab1/Debug/vc141.pdb
 x64/Debug/Lab1.pdb
+Debug/Lab1.exe
+Debug/Lab1.ilk
+Debug/Lab1.pdb
+Debug/Lab2.exe
+Debug/Lab2.ilk
+Debug/Lab3.exe
+Debug/Lab3.ilk
+Debug/Lab3_lotus.exe
+Debug/Lab3_pear.exe
+Debug/Lab4.exe
+Debug/Lab4.ilk
+Debug/Lab5.exe
+Debug/Lab5.ilk
+Debug/Lab6.exe
+Debug/Lab6.ilk
+Debug/Lab1.exe
+Debug/Lab1.ilk
+Debug/Lab1.pdb
+Debug/Lab2.exe
+Debug/Lab2.ilk
+Debug/Lab3.exe
+Debug/Lab3.ilk
+Lab1/Debug/CGObject.obj
+Lab1/Debug/Cloth.obj
+Lab1/Debug/Lab1.Build.CppClean.log
+Lab1/Debug/Lab1.log
+Lab1/Debug/Lab1.tlog/CL.command.1.tlog
+Lab1/Debug/Lab1.tlog/CL.read.1.tlog
+Lab1/Debug/Lab1.tlog/CL.write.1.tlog
+Lab1/Debug/Lab1.tlog/link.command.1.tlog
+Lab1/Debug/Lab1.tlog/link.read.1.tlog
+Lab1/Debug/main.obj
+Lab2/Debug/*
+Lab3/Debug/*
+Lab4/Debug/*
+Lab5/Debug/*
+Lab6/Debug/*
+Debug/Lab1.exe
+Debug/Lab1.ilk
+Debug/Lab1.pdb
+Debug/Lab2.exe
+Debug/Lab2.ilk
+Debug/Lab3.exe
+Debug/Lab3.ilk
+Lab1/Debug/CGObject.obj
+Lab1/Debug/Cloth.obj
+Lab1/Debug/Lab1.log
+Lab1/Debug/Lab1.tlog/CL.command.1.tlog
+Lab1/Debug/Lab1.tlog/CL.read.1.tlog
+Lab1/Debug/Lab1.tlog/CL.write.1.tlog
+Lab1/Debug/Lab1.tlog/link.command.1.tlog
+Lab1/Debug/Lab1.tlog/link.read.1.tlog
+Lab1/Debug/main.obj
+Lab1/Debug/vc141.idb
+Lab1/Debug/vc141.pdb
+Lab1/Debug/main.obj
